--- a/Croatian/main/DeskClock.apk/res/values-hr/strings.xml
+++ b/Croatian/main/DeskClock.apk/res/values-hr/strings.xml
@@ -231,6 +231,7 @@
   <string name="miuix_appcompat_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
+  <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
   <string name="miuix_item_view_role_description">Kartica</string>
@@ -247,6 +248,7 @@
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_popup_window_default_title">Skočni prozor</string>
   <string name="modify_alarm">Uredi alarm</string>
   <string name="module_dialog_negative">"Ne prihvaćam"</string>
   <string name="module_dialog_positive">Prihvaćam</string>
