--- a/Croatian/main/Calculator.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Calculator.apk/res/values-hr/strings.xml
@@ -198,6 +198,7 @@ Jednogodišnji i petogodišnji LPR će se citirati 20. u mjesecu (mogu doći do 
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
