--- a/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
+++ b/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
@@ -315,6 +315,7 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="file_cloud_setting">Postavke datoteke</string>
   <string name="file_cloud_setting_item_view_message">Pogledajte iWork, Xmind i *.psd datoteke na mreži</string>
   <string name="file_cloud_setting_item_view_title">Mrežne datoteke</string>
+  <string name="file_error_cannt_view">"Došlo je do pogreške. Ne mogu prikazati datoteku."</string>
   <string name="file_info_canread">Čitljivo: </string>
   <string name="file_info_canwrite">Pisljivo: </string>
   <string name="file_info_ishidden">Skriveno: </string>
